# GameboyAdvanced

./: .gitignore  Cargo.toml  README.md  justfile  todo.txt
.VSCodeCounter/2024-08-29_15-53-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
core/: Cargo.toml
core/src/: apu.rs  bus.rs  joypad.rs  lib.rs  memory.rs
core/src/cpu/: assemblify.rs  decode.rs  execute_arm.rs  execute_thumb.rs  mod.rs
core/src/mem/: bus.rs  carts.rs  memory.rs  mod.rs
core/src/ppu/: accumulate.rs  bitmaps.rs  mod.rs  obj.rs  tiles.rs  window.rs
debug/: debug.txt
src/: cpu.rs  debug.rs  decode.rs  emulator.rs  execute.rs  joypad.rs  json_tests.rs  main.rs  memory.rs  ppu.rs  processor.rs
src/cpu/: decode.rs  execute_arm.rs  execute_thumb.rs  interrupt.rs  mod.rs  registers.rs
src/debug/: cpu_widget.rs  instruction_widget.rs  memory_widget.rs
src/ppu/: bitmaps.rs  mod.rs  obj.rs  tiles.rs  window.rs
test/: info.txt
