[package]
name = "gameboy-advanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[profile.dev]
opt-level = 3

[dependencies]
core = { path = "core/"}
egui = "0.31.1"
eframe = "0.31.1"
egui_memory_editor = "0.2.6"

[features]
debug = []
default = ["debug"]