[package]
name = "gameboy-advanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[profile.dev]
opt-level = 3

[dependencies]
gba_core = { path = "core/"}
egui = "0.31.1"
eframe = "0.31.1"
parking_lot = {version = "0.12.4", features = ["deadlock_detection"]}
serde_json = "1.0"

[features]
debug = []
default = ["debug"]